# qchem-rs

./: Cargo.toml  README.md  profile.json  water.sh
benches/: integrals.rs
core/: Cargo.toml
core/benches/: generate_inputs.rs  integrals.rs
core/benches/test-inputs/: benzene_6-31G.json  benzene_STO-3G.json  hydrogen_6-31G.json  hydrogen_STO-3G.json  water_6-31G.json  water_STO-3G.json
core/src/: atom.rs  diis.rs  lib.rs  molecule.rs
core/src/basis/: functions.rs  mod.rs  set.rs
core/src/config/: basis_set.rs  mod.rs  molecule.rs
core/src/hf/: mo.rs  mod.rs  rhf.rs  scf.rs  uhf.rs  utils.rs
core/src/integrals/: electron_tensor.rs  mmd.rs  mod.rs  utils.rs
data/: hydrogen.json  water.json
qchem-cli/: Cargo.toml
qchem-cli/src/: main.rs
src/: atom.rs  basis.rs  main.rs  molecule.rs  periodic_table.rs  utils.rs
src/basis/: mod.rs  set.rs
src/bse/: atomic_table.rs  basis_set.rs  mod.rs
src/config/: basis_set.rs  mod.rs  molecule.rs
src/hf/: mo.rs  mod.rs  scf.rs
src/integrals/: electron_tensor.rs  mmd.rs  mod.rs  naive.rs
