[workspace]
members = ["core", "qchem-cli"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
itertools = "0.12.1"
nalgebra = "0.32.4"
smallvec = "1.13.1"
log = "0.4.21"
