[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
itertools = { workspace = true }
nalgebra = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
boys = "0.1.0"

[dev-dependencies]
rand = { workspace = true }
criterion = "0.5.1"
approx = "0.5.1"

[[bench]]
name = "integrals"
harness = false