[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.10.0", optional = true }
serde_json = { workspace = true }
itertools = { workspace = true }
nalgebra = { workspace = true }
smallvec = { workspace = true }
molint = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
boys = "0.1.0"

[features]
rayon = ["dep:rayon"]

