[package]
name = "qchem-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
nalgebra = { workspace = true }
serde_json = { workspace = true }
molint = { workspace = true }
pretty_env_logger = "0.5.0"
core = { path = "../core" }
log = { workspace = true }
anyhow = "1.0.81"
